--- a/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
+++ b/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
@@ -59,4 +59,11 @@ server {
         proxy_pass http://grafana;
         include common_location.conf;
     }
+
+    location /nginx_status {
+        stub_status;
+        access_log off;
+        # allow 127.0.0.1;
+        # deny all;
+    }
 }
