Dashboard JSON Dateien für automatischen Import generiert (für Duration of Requests)

--- a/Grafana/provisioning/dashboards/dashboard.yml
+++ b/Grafana/provisioning/dashboards/dashboard.yml
@@ -7,5 +7,6 @@ providers:
   type: file
   disableDeletion: false
   editable: true
+  updateIntervalSeconds: 10 # Scanning for changed dashboards
   options:
     path: /etc/grafana/provisioning/dashboards
