--- a/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
+++ b/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
@@ -16,6 +16,9 @@ upstream kibana {
 upstream grafana {
     server grafana:3000;
 }
+upstream ml.proxy {
+    server ml.proxy:80;
+}
 
 server {
     # server_name localhost;
@@ -26,27 +29,33 @@ server {
     include /etc/nginx/ssl.conf;
 
     location / {
-        proxy_pass http://angularwebapp;
+        proxy_pass http://ml.proxy;
         include common_location.conf;
     }
 
-    location /weatherdata {
-        rewrite ^/weatherdata(.*)$ $1 break;
-        proxy_pass http://weatherapi;
-        include common_location.conf;
-    }
+    # Disabled for using ML.Proxy for delegating the traffic
+    # location / {
+    #     proxy_pass http://angularwebapp;
+    #     include common_location.conf;
+    # }
 
-    location /locationdata {
-        rewrite ^/locationdata(.*)$ $1 break;
-        proxy_pass http://locationapi;
-        include common_location.conf;
-    }
+    # location /weatherdata {
+    #     rewrite ^/weatherdata(.*)$ $1 break;
+    #     proxy_pass http://weatherapi;
+    #     include common_location.conf;
+    # }
 
-    location /identity {
-        rewrite ^/identity(.*)$ $1 break;
-        proxy_pass http://authentication;
-        include common_location.conf;
-    }
+    # location /locationdata {
+    #     rewrite ^/locationdata(.*)$ $1 break;
+    #     proxy_pass http://locationapi;
+    #     include common_location.conf;
+    # }
+
+    # location /identity {
+    #     rewrite ^/identity(.*)$ $1 break;
+    #     proxy_pass http://authentication;
+    #     include common_location.conf;
+    # }
 
     location /kibana {
         rewrite ^/kibana(.*)$ $1 break;
