--- a/ML.Proxy/ML.Proxy.csproj
+++ b/ML.Proxy/ML.Proxy.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="ThrottlR" Version="2.0.0" />
     <PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.11.*" />
   </ItemGroup>
 </Project>
