--- a/ML.Proxy/Dockerfile
+++ b/ML.Proxy/Dockerfile
@@ -4,12 +4,15 @@ RUN apt-get update && apt-get install -y locales
 WORKDIR /app
 
 # copy csproj and restore as distinct layers
-COPY *.csproj ./
-RUN dotnet restore "ML.Proxy.csproj"
+COPY ML.Proxy/*.csproj ./ML.Proxy/
+COPY ThrottlR/*.csproj ./ThrottlR/
+RUN dotnet restore "./ML.Proxy/ML.Proxy.csproj"
+RUN dotnet restore "./ThrottlR/ThrottlR.csproj"
 
 # copy everything else and build app
-COPY . ./
-RUN dotnet publish "ML.Proxy.csproj" -c Release -o out
+COPY ML.Proxy/. ./ML.Proxy/
+COPY ThrottlR/. ./ThrottlR/
+RUN dotnet publish "./ML.Proxy/ML.Proxy.csproj" -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS runtime
 WORKDIR /app
