--- a/ML.Proxy/ML.Proxy.csproj
+++ b/ML.Proxy/ML.Proxy.csproj
@@ -4,7 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="ThrottlR" Version="2.0.0" />
     <PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.11.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ThrottlR\ThrottlR.csproj" />
   </ItemGroup>
 </Project>
