--- a/manifests/grafana-deployment.yml
+++ b/manifests/grafana-deployment.yml
@@ -20,7 +20,7 @@ spec:
         - containerPort: 3000
         env:
           # - name: GF_SERVER_DOMAIN
-          #   value: "bff-k8s.ddns.net"
+          #   value: "jb-thesisproject.ddns.net"
           - name: GF_SERVER_ROOT_URL
             value: "%(protocol)s://%(domain)s:/grafana/"
         volumeMounts:
