--- a/manifests/namespace-issuer.yml
+++ b/manifests/namespace-issuer.yml
@@ -1,8 +1,8 @@
-apiVersion: cert-manager.io/v1alpha2
-kind: ClusterIssuer
+apiVersion: cert-manager.io/v1
+kind: Issuer
 metadata:
   # name: letsencrypt-staging
-  name: letsencrypt-prod
+  name: letsencrypt-prod-jb-thesis-ns
   namespace: jb-thesis-project
 spec:
   acme:
@@ -12,7 +12,7 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     email: Julian.Buecher@STPAG2014.onmicrosoft.com
     privateKeySecretRef:
-      name: letsencrypt-prod
+      name: letsencrypt-prod-jb-thesis
     solvers:
     - http01:
         ingress:
