Python-Tool für das Bearbeiten der CSV-Datensätze ergänzt

--- a/ReverseProxy/basic.conf/nginx.conf
+++ b/ReverseProxy/basic.conf/nginx.conf
@@ -1,9 +1,11 @@
 
-error_log  /var/log/nginx/error.log debug;
+# error_log  /var/log/nginx/error.log debug;
+error_log  /var/log/nginx/error.log info;
 pid        /var/run/nginx.pid;
 
 
 events {
+    # Reduces the number of open worker connections to handle traffic to the backend
     worker_connections  1024;
 }
 
