--- a/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
+++ b/ReverseProxy/conf.d/sites-available/jb-thesis-project.conf
@@ -22,7 +22,7 @@ upstream ml.proxy {
 
 server {
     # server_name localhost;
-    listen 80;
+    # listen 80;
     listen 443 ssl;
 
     include common.conf;
