--- a/ThrottlR/ThrottlR.csproj
+++ b/ThrottlR/ThrottlR.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageDescription>Throttling middleware for ASP.NET Core</PackageDescription>
     <Authors>Kahbazi</Authors>
     <AssemblyName>ThrottlR</AssemblyName>
