--- a/ML.Proxy.ModelTrainer/ML.Proxy.ModelTrainer.csproj
+++ b/ML.Proxy.ModelTrainer/ML.Proxy.ModelTrainer.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.1.0" />
     <PackageReference Include="Microsoft.ML" Version="1.5.5" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="1.5.5" />
     <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.5" />
   </ItemGroup>
 
