--- a/ML.Proxy.ModelTrainer.Python/requirements.txt
+++ b/ML.Proxy.ModelTrainer.Python/requirements.txt
@@ -1,10 +1,13 @@
 absl-py==0.13.0
 astunparse==1.6.3
+backcall==0.2.0
 cached-property==1.5.2
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
+cycler==0.10.0
 dataclasses==0.8
+decorator==5.0.9
 flatbuffers==1.12
 gast==0.4.0
 google-auth==1.31.0
@@ -14,18 +17,31 @@ grpcio==1.34.1
 h5py==3.1.0
 idna==2.10
 importlib-metadata==4.5.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+jedi==0.18.0
 joblib==1.0.1
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
 Markdown==3.3.4
+matplotlib==3.3.4
 numpy==1.19.5
 oauthlib==3.1.1
 opt-einsum==3.3.0
 pandas==1.1.5
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
 pkg-resources==0.0.0
+prompt-toolkit==3.0.19
 protobuf==3.17.3
+ptyprocess==0.7.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+Pygments==2.9.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
@@ -43,8 +59,10 @@ tensorflow-decision-forests==0.1.6
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
+traitlets==4.3.3
 typing-extensions==3.7.4.3
 urllib3==1.26.5
+wcwidth==0.2.5
 Werkzeug==2.0.1
 wrapt==1.12.1
 wurlitzer==2.1.0
