--- a/ML.Proxy.ModelTrainer/ML.Proxy.ModelTrainer.csproj
+++ b/ML.Proxy.ModelTrainer/ML.Proxy.ModelTrainer.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.ML" Version="1.5.5" />
     <PackageReference Include="Microsoft.ML.FastTree" Version="1.5.5" />
     <PackageReference Include="Microsoft.ML.OnnxConverter" Version="0.17.5" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.8.0" />
+    <PackageReference Include="Microsoft.ML.OnnxTransformer" Version="1.5.5" />
     <PackageReference Include="Microsoft.ML.TimeSeries" Version="1.5.5" />
   </ItemGroup>
 
