Network Traffic Analyzer und Änderungen an der Throttle-Middleware für die Reaktion auf Änderungen von Außen durchgeführt

--- a/IdentityServer/appsettings.Development.json
+++ b/IdentityServer/appsettings.Development.json
@@ -21,8 +21,15 @@
       }
     ]
   },
-  "IdentityServer": {
-    "Authority": "https://localhost/identity",
-    "RequireHttpsMetadata": true
+  "BasepathConfig": {
+    "ProxyHeader": "X-Forwarded-For",
+    "InternalBasePath": "/",
+    "ProxyBasePath": "/identity"
+  },
+  "WebApp": {
+    "Callback-Url": "https://localhost:4200/signin-oidc",
+    "Silent-Refresh-Url": "https://localhost:4200/silent-renew.html",
+    "Front-Channel-Logout-Url": "https://localhost:4200/signout-oidc",
+    "Post-Logout-Redirect-Url": "https://localhost/signout-callback-oidc"
   }
 }
