--- a/ML.Proxy/appsettings.Development.json
+++ b/ML.Proxy/appsettings.Development.json
@@ -5,5 +5,119 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Options": [
+          {
+            "AutoRegisterTemplate": "true"
+          }
+        ],
+        "Args": {
+          "nodeUris": "http://localhost:9200",
+          "indexFormat": "logstash-{0:yyyy.MM.dd}"
+        }
+      }
+    ]
+  },
+  "AllowedHosts": "*",
+  "ML.Proxy": {
+    "Routes": {
+      "angularSpa": {
+        "ClusterId": "spaCluster",
+        "Match": {
+          "Path": "/{**catch-all}"
+        }
+      },
+      "weatherApi": {
+        "ClusterId": "weatherCluster",
+        "Match": {
+          "Path": "/weatherdata/{*any}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/weatherdata" }
+        ]
+      },
+      "locationApi": {
+        "ClusterId": "locationCluster",
+        "Match": {
+          "Path": "/locationdata/{*any}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/locationdata" }
+        ]
+      },
+      "identityServer": {
+        "ClusterId": "identityCluster",
+        "Match": {
+          "Path": "/identity/{*any}"
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "/identity" }
+        ]
+      }
+    },
+    "Clusters": {
+      "spaCluster": {
+        "Destinations": {
+          "spa": {
+            "Address": "https://localhost:4200"
+          }
+        }
+      },
+      "weatherCluster": {
+        "Destinations": {
+          "weatherApi": {
+            "Address": "https://localhost:8001"
+          }
+        }
+      },
+      "locationCluster": {
+        "Destinations": {
+          "locationApi": {
+            "Address": "https://localhost:6001"
+          }
+        }
+      },
+      "identityCluster": {
+        "Destinations": {
+          "identityServer": {
+            "Address": "https://localhost:5001"
+          }
+        }
+      }
+    }
+  },
+  "ML.Proxy.ML-Modell": {
+    "ZIP": {
+      "GoldenEye": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ZIP/GoldenEyeTrafficData-classification.zip"
+      },
+      "LOIC": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ZIP/LOICTrafficData-classification.zip"
+      },
+      "Slowloris": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ZIP/SlowlorisTrafficData-classification.zip"
+      }
+    },
+    "ONNX": {
+      "GoldenEye": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ONNX/GoldenEyeTrafficData-classification.onnx"
+      },
+      "LOIC": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ONNX/LOICTrafficData-classification.onnx"
+      },
+      "Slowloris": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ONNX/SlowlorisTrafficData-classification.onnx"
+      }
+    }
   }
 }
