--- a/ML.Proxy/appsettings.json
+++ b/ML.Proxy/appsettings.json
@@ -6,6 +6,28 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Serilog": {
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss.ms} {Level:u3}] {ThreadId} {MachineName} {EnvironmentUserName} {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Elasticsearch",
+        "Options": [
+          {
+            "AutoRegisterTemplate": "true"
+          }
+        ],
+        "Args": {
+          "nodeUris": "http://elasticsearch:9200",
+          "indexFormat": "logstash-{0:yyyy.MM.dd}"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "ML.Proxy": {
     "Routes": {
@@ -71,6 +93,30 @@
             "Address": "http://identityserver"
           }
         }
+      }
+    }
+  },
+  "ML.Proxy.ML-Modell": {
+    "ZIP": {
+      "GoldenEye": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ZIP/GoldenEyeTrafficData-classification.zip"
+      },
+      "LOIC": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ZIP/LOICTrafficData-classification.zip"
+      },
+      "Slowloris": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ZIP/SlowlorisTrafficData-classification.zip"
+      }
+    },
+    "ONNX": {
+      "GoldenEye": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ONNX/GoldenEyeTrafficData-classification.onnx"
+      },
+      "LOIC": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ONNX/LOICTrafficData-classification.onnx"
+      },
+      "Slowloris": {
+        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/blob/main/ML.Proxy.ModelTrainer/MLModels/ONNX/SlowlorisTrafficData-classification.onnx"
       }
     }
   }
