--- a/WeatherApi/appsettings.Development.json
+++ b/WeatherApi/appsettings.Development.json
@@ -22,7 +22,7 @@
     ]
   },
   "IdentityServer": {
-    "Authority": "https://reverse.proxy.localhost/identity",
+    "Authority": "https://localhost/identity",
     "RequireHttpsMetadata": true
   }
 }
