--- a/ML.Proxy/ML.Proxy.csproj
+++ b/ML.Proxy/ML.Proxy.csproj
@@ -4,9 +4,16 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.ML" Version="1.5.5" />
+    <PackageReference Include="PacketDotNet" Version="1.2.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
+    <PackageReference Include="Serilog.Formatting.Elasticsearch" Version="8.4.1" />
+    <PackageReference Include="SharpPcap" Version="6.0.0" />
     <PackageReference Include="Yarp.ReverseProxy" Version="1.0.0-preview.11.*" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ML.Proxy.DataModels\ML.Proxy.DataModels.csproj" />
     <ProjectReference Include="..\ThrottlR\ThrottlR.csproj" />
   </ItemGroup>
 </Project>
