--- a/ThrottlR/ThrottlR.csproj
+++ b/ThrottlR/ThrottlR.csproj
@@ -18,5 +18,11 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ML" Version="1.5.5" />
+    <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.8.1" />
+    <PackageReference Include="Microsoft.ML.TensorFlow" Version="1.5.5" />
+  </ItemGroup>
   
 </Project>
