--- a/ML.Proxy/appsettings.Development.json
+++ b/ML.Proxy/appsettings.Development.json
@@ -119,5 +119,8 @@
         "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/SlowlorisTrafficData-classification.onnx"
       }
     }
+  },
+  "Redis": {
+    "Connection-String": "localhost:6379"
   }
 }
