--- a/ML.Proxy/appsettings.json
+++ b/ML.Proxy/appsettings.json
@@ -96,28 +96,7 @@
       }
     }
   },
-  "ML.Proxy.ML-Modell": {
-    "ZIP": {
-      "GoldenEye": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ZIP/GoldenEyeTrafficData-classification.zip"
-      },
-      "LOIC": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ZIP/LOICTrafficData-classification.zip"
-      },
-      "Slowloris": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ZIP/SlowlorisTrafficData-classification.zip"
-      }
-    },
-    "ONNX": {
-      "GoldenEye": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/GoldenEyeTrafficData-classification.onnx"
-      },
-      "LOIC": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/LOICTrafficData-classification.onnx"
-      },
-      "Slowloris": {
-        "Model-Path": "https://github.com/JulianHBuecher/Bachelor-Thesis/raw/main/ML.Proxy.ModelTrainer/MLModelle/ONNX/SlowlorisTrafficData-classification.onnx"
-      }
-    }
+  "Redis": {
+    "Connection-String": "redis-requestcache:6379"
   }
 }
